# groot

./: .gitignore  .travis.yml  LICENSE  README.md  Setup.hs  Vagrantfile  appveyor.yml  docker-compose.yml  groot-cluster.yml  groot-compose.yml  groot.cabal  package.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell.yml
app/: Main.hs
app/Groot/: App.hs
app/Groot/App/: Cli.hs  Cluster.hs  Compose.hs  Config.hs  Console.hs  Events.hs  List.hs  Service.hs  Task.hs
app/Groot/App/Cli/: Parsers.hs
app/Groot/App/Cluster/: Events.hs
app/Groot/App/List/: Base.hs  Cluster.hs  Instance.hs  Service.hs  Task.hs  TaskDef.hs
app/Groot/App/Service/: Events.hs
docs/: contact.markdown  docs.cabal
sandbox/localstack/: Dockerfile  startup.sh
scripts/: centos_setup.sh  setup-hackage.sh  travis_setup.sh  vagrant_setup.sh
scripts/travis/: build.sh  hackage.sh  setup.sh
src/: Groot.hs
src/Groot/: AWS.hs  Auth.hs  CLI.hs  Cluster.hs  Compose.hs  Config.hs  Console.hs  Core.hs  Data.hs  Exception.hs  Manifest.hs  PrettyPrint.hs  Session.hs  Shell.hs  Types.hs
src/Groot/AWS/: AutoScaling.hs  Base.hs  Cluster.hs  Instance.hs  Service.hs  Task.hs  TaskDef.hs
src/Groot/CLI/: Auth.hs  Cluster.hs  Common.hs  Compose.hs  Introspect.hs  List.hs  Service.hs
src/Groot/CLI/Cluster/: Events.hs  Inspect.hs  Introspect.hs  Update.hs
src/Groot/CLI/List/: Cluster.hs  Common.hs  ContainerInstance.hs  ContainerService.hs  Task.hs  TaskDef.hs  Volume.hs
src/Groot/CLI/Service/: Compose.hs  Events.hs  Inspect.hs
src/Groot/Compose/: Service.hs
src/Groot/Compose/Service/: API.hs  AWS.hs  DryRun.hs  Free.hs  Model.hs
src/Groot/Core/: Common.hs  Compose.hs  Console.hs  Events.hs
src/Groot/Data/: Base.hs  Cluster.hs  Conduit.hs  Filter.hs  Instance.hs  Service.hs  Task.hs  TaskDef.hs  Text.hs
src/Groot/Data/Conduit/: STM.hs
src/Groot/Data/Text/: Display.hs  Lens.hs  PrettyPrint.hs  Styled.hs
src/Groot/Data/Text/PrettyPrint/: ANSI.hs  Table.hs
src/Groot/Exception/: Cluster.hs  Instance.hs  Manifest.hs  Service.hs  Task.hs  TaskDef.hs
src/Groot/Internal/: AWS.hs  Display.hs  PrettyPrint.hs  Util.hs
src/Groot/Internal/AWS/: Auth.hs  AutoScaling.hs  Cluster.hs  Images.hs  Instance.hs  Service.hs  Task.hs  TaskDef.hs
src/Groot/Internal/Data/: Filter.hs  JSON.hs  Text.hs
src/Groot/Internal/Data/Text/: Styled.hs
src/Groot/Types/: Base.hs  Cluster.hs  ContainerInstance.hs
test/: Spec.hs
test/Groot/: AWSSpec.hs
test/Groot/AWS/: BaseSpec.hs
test/Test/Groot/: Console.hs  Types.hs
test/Test/Groot/Core/: Console.hs
test/Test/Groot/Data/: Filter.hs
test/Test/Groot/Internal/Data/: Filter.hs
test/Test/Groot/Types/: Base.hs  Cluster.hs
