name:                groot
version:             0.0.1.0
-- synopsis:
description:         Command line utility to manage AWS ECS resources
homepage:            https://github.com/alonsodomin/groot
license:             Apache
license-file:        LICENSE
author:              A. Alonso Dominguez
maintainer:          alonso.domin@gmail.com
copyright:           2017 A. Alonso Dominguez
category:            Command Line
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Groot.AWS.Cluster
                     , Groot.AWS.Instance
                     , Groot.AWS.Service
                     , Groot.AWS.Task
                     , Groot.AWS.TaskDef
                     , Groot.AWS
                     , Groot.Compose
                     , Groot.Config
                     , Groot.Core
                     , Groot.Data.Base
                     , Groot.Data.Cluster
                     , Groot.Data.Instance
                     , Groot.Data.Service
                     , Groot.Data.Task
                     , Groot.Data.TaskDef
                     , Groot.Data.Text
                     , Groot.Data
                     , Groot.Exception.Cluster
                     , Groot.Exception.Instance
                     , Groot.Exception.Task
                     , Groot.Exception.Service
                     , Groot.Exception
                     , Groot.Types.Base
                     , Groot.Types.Cluster
                     , Groot.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , directory
                     , exceptions
                     , lens
                     , ini
                     , text
                     , conduit
                     , conduit-combinators
                     , mtl
                     , transformers
                     , vector
                     , time
                     , amazonka
                     , amazonka-core
                     , amazonka-autoscaling
                     , amazonka-ecs
  default-language:    Haskell2010

executable groot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , ansi-terminal
                     , boxes
                     , bytestring
                     , conduit                     
                     , exceptions
                     , http-conduit
                     , http-types
                     , optparse-applicative                                                               
                     , lens
                     , text
                     , time
                     , mtl
                     , transformers
                     , yaml
                     , amazonka
                     , amazonka-core
                     , amazonka-ecs
                     , pptable
                     , groot
  other-modules:       Groot.App.Cli
                     , Groot.App.Cli.Parsers
                     , Groot.App.Compose
                     , Groot.App.Console
                     , Groot.App.Events
                     , Groot.App.List.Base
                     , Groot.App.List.Cluster
                     , Groot.App.List.Instance
                     , Groot.App.List.Task
                     , Groot.App.List.TaskDef
                     , Groot.App.List.Service
                     , Groot.App.List
                     , Groot.App.Task
                     , Groot.App
  default-language:    Haskell2010

test-suite groot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , attoparsec
                     , amazonka
                     , amazonka-core
                     , groot
                     , hspec
  other-modules:       Test.Groot.Types
                     , Test.Groot.Types.Base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hask-roller
