name:                groot
version:             0.0.1.0
synopsis:            Command line utility to manage AWS ECS resources
description:
    `groot` is a command line application with the purpose of remote managing AWS ECS Clusters and
    their associated resources (Tasks, Instances, Services, etc.)
homepage:            https://github.com/alonsodomin/groot
license:             Apache
license-file:        LICENSE
author:              A. Alonso Dominguez
maintainer:          alonso.domin@gmail.com
copyright:           2017 A. Alonso Dominguez
category:            Command Line
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Groot.CLI
                     , Groot.Compose
                     , Groot.Config
                     , Groot.Console
                     , Groot.Core                     
                     , Groot.Data.Conduit.STM
                     , Groot.Data.Filter
                     , Groot.Data.Text.Display
                     , Groot.Data.Text.Styled
                     , Groot.Data.Text                     
                     , Groot.Exception
                     , Groot.Types
  other-modules:       Paths_groot
                     , Groot.AWS.Cluster
                     , Groot.AWS.Instance
                     , Groot.AWS.Service
                     , Groot.AWS.Task
                     , Groot.AWS.TaskDef
                     , Groot.AWS
                     , Groot.CLI.Common                     
                     , Groot.CLI.Cluster.Events
                     , Groot.CLI.Cluster
                     , Groot.CLI.List.Common
                     , Groot.CLI.List.Cluster
                     , Groot.CLI.List.ContainerInstance
                     , Groot.CLI.List.ContainerService
                     , Groot.CLI.List.Task
                     , Groot.CLI.List.TaskDef
                     , Groot.CLI.List
                     , Groot.CLI.Service.Compose
                     , Groot.CLI.Service.Events
                     , Groot.CLI.Service
                     , Groot.Compose.Service.Model
                     , Groot.Compose.Service.Free
                     , Groot.Compose.Service.AWS
                     , Groot.Compose.Service.DryRun
                     , Groot.Compose.Service
                     , Groot.Core.Common
                     , Groot.Core.Events
                     , Groot.Exception.Cluster
                     , Groot.Exception.Instance
                     , Groot.Exception.Task
                     , Groot.Exception.TaskDef
                     , Groot.Exception.Service
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , amazonka >= 1.5.0 && < 1.6
                     , amazonka-core
                     , amazonka-autoscaling
                     , amazonka-ecs
                     , ansi-terminal
                     , attoparsec
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , directory
                     , exceptions
                     , free
                     , http-conduit
                     , http-types
                     , ini
                     , lens
                     , lifted-base
                     , mmorph
                     , monad-control
                     , mtl >= 2.2 && < 2.3
                     , optparse-applicative
                     , pptable
                     , resourcet
                     , stm
                     , stm-chans
                     , stm-conduit
                     , stm-delay
                     , text
                     , time
                     , transformers      
                     , unordered-containers               
                     , uuid
                     , vector
                     , yaml >= 0.8.20 && < 0.9
  default-language:    Haskell2010

executable groot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , groot
  default-language:    Haskell2010

test-suite groot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , attoparsec
                     , amazonka >= 1.5.0 && < 1.6
                     , amazonka-core
                     , checkers
                     , groot
                     , text
                     , hspec
                     , QuickCheck
                     , quickcheck-text
  other-modules:       Test.Groot.Core.Console
                     , Test.Groot.Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alonsodomin/groot
